-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 11, 11.0.1, 12
-
Component/s: hotspot
-
b24
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8217831 | 11.0.4-oracle | Erik Gahlin | P2 | Resolved | Fixed | b05 |
| JDK-8217926 | 11.0.3-oracle | Erik Gahlin | P2 | Closed | Fixed | b05 |
| JDK-8219223 | 11.0.3 | Erik Gahlin | P2 | Closed | Fixed | master |
| JDK-8240396 | openjdk8u262 | Erik Gahlin | P2 | Resolved | Fixed | team |
At Code One 2018, for the Method Profiling part of the HoL, I noticed that the line number information for the method profiling events (jdk.ExecutionSample event), is always 0.
- backported by
-
JDK-8217831 Line number information for execution samples always 0
-
- Resolved
-
-
JDK-8240396 Line number information for execution samples always 0
-
- Resolved
-
-
JDK-8243905 Line number information for execution samples always 0
-
- Resolved
-
-
JDK-8217926 Line number information for execution samples always 0
-
- Closed
-
-
JDK-8219223 Line number information for execution samples always 0
-
- Closed
-
- relates to
-
JDK-8239140 Backport JFR to OpenJDK 8
-
- Resolved
-
(1 relates to)