8213421: Line number information for execution samples always 0

Reviewed-by: mgronlun